--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="transform rotate-2">
                 <img src="src/img/5.png" alt="lingkaran" width="210" height="50"/>
                 </div>
-                <a href="/all.html">
+                <a href="./all.html">
                     <p class="absolute  left-12 top-6 cursor-pointer">SHOP MORE</p>
                 </a>
                 </div>
