--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
             <div class="flex">
                 <div class="flex flex-wrap items-center text-base justify-center">
-                    <a href="/" class="mr-5 hover:text-gray-900 cursor-pointer">HOME</a>
+                    <a href="./index.html" class="mr-5 hover:text-gray-900 cursor-pointer">HOME</a>
                     <div class="relative mr-5">
                         <input type="checkbox" id="sortbox" class="hidden absolute">
                         <label for="sortbox" class="flex items-center space-x-1 cursor-pointer">
@@ -59,9 +59,9 @@
                     
                             <div id="sortboxmenu" class="absolute mt-1 left-1 top-full min-w-max shadow rounded opacity-0 bg-yellow-50 border border-gray-400 transition delay-75 ease-in-out z-10">
                             <ul class="block text-start text-gray-900">
-                                <li><a href="/all.html" class="block px-3 py-2 hover:bg-gray-200">Get it Today!</a></li>
+                                <li><a href="./all.html" class="block px-3 py-2 hover:bg-gray-200">Get it Today!</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Kooky Cream Bundle</a></li>
-                                <li><a href="/mini.html" class="block px-3 py-2 hover:bg-gray-200">Mini Cakes</a></li>
+                                <li><a href="./mini.html" class="block px-3 py-2 hover:bg-gray-200">Mini Cakes</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Fruits</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Chocolate</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Mille Crepes</a></li>
@@ -73,9 +73,9 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="#" class="mr-5 hover:text-gray-900 cursor-pointer">ORDER NOW
+                    <a href="./all.html" class="mr-5 hover:text-gray-900 cursor-pointer">ORDER NOW
                     </a>  
-                    <a href="#" class="mr-5 hover:text-gray-900 cursor-pointer">CONTACT</a>
+                    <a href="https://api.whatsapp.com/send?phone=60122404211&text=Hi%20there!%20Thank%20you%20for%20contacting%20Kooky%20Cream.%20What%20can%20I%20help%20you%20with%20today%3F" class="mr-5 hover:text-gray-900 cursor-pointer">CONTACT</a>
                     <div class="relative text-gray-800 mr-5">
                         <input type="search" name="search" placeholder="search" class="bg-gray-70 text-gray-800 h-10 px-5 ml-8 pl-10 rounded-full text-sm focus:outline-none">
                         <button type="submit" class="absolute left-2 top-0 mt-3 pl-4 ml-4 cursor-pointer">
@@ -85,7 +85,7 @@
                         </button>
                       </div>
                     <div>
-                    <a href="/cart.html">
+                    <a href="./cart.html">
                     <img src="src/img/cart.png" alt="logo cart" width="35" height="35" class="mx-auto mr-5 cursor-pointer"/>
                     </a>
                 </div>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="absolute md:left-20 bottom-32">
                     <div>
-                        <a href="#">
+                        <a href="./cart.html">
                             <p class=" bg-gray-800 py-2 px-4 text-center font-light text-white text-md -mx-1">Add to Cart</p>
                         </a>
                     </div>
@@ -167,7 +167,7 @@
                 </div>
                 <div class="absolute left-1/3 bottom-32 mx-16">
                     <div>
-                        <a href="#">
+                        <a href="./cart.html">
                             <p class=" bg-gray-800 py-2 px-4 text-center font-light text-white text-md -mx-1">Add to Cart</p>
                         </a>
                     </div>
@@ -182,7 +182,7 @@
             
                 <div class="absolute top-56  right-8">
                     <p class="text-center -mb-20 font-bold text-xl">Rose Lychee</p>
-                    <a href="/roselychee.html" class="cursor-pointer ">
+                    <a href="./roselychee.html" class="cursor-pointer ">
                     <img src="src/img/roselychee.png" alt="roselychee" width="400" height="400" class="mt-0">
                     </a>
                 </div>
@@ -194,14 +194,14 @@
                 </div>
                 <div class="absolute right-64 bottom-32">
                     <div>
-                        <a href="#">
+                        <a href="./cart.html">
                             <p class=" bg-gray-800 py-2 px-4 text-center font-light text-white text-md -mx-1">Add to Cart</p>
                         </a>
                     </div>
                 </div>
                 <div class="absolute right-16 bottom-32 mx-2">
                     <div>
-                        <a href="#">
+                        <a href="./roselychee.html">
                             <p class="bg-gray-800 py-2 px-7 text-center  font-light text-white text-md">Buy Now</p>
                         </a>
                     </div>
@@ -224,7 +224,7 @@
             <a href="#">
             <p class="absolute left-1/3 ml-32 bottom-72 text-transparent text-5xl cursor-pointer z-20">kooky</p>
             </a>
-            <a href="mini.html">
+            <a href="./mini.html">
             <p class="absolute right-20 bottom-72 text-transparent text-5xl cursor-pointer z-20">kooky</p>
             </a>
             <a href="#">
@@ -254,19 +254,19 @@
             <p class="absolute top-36 left-1/3 ml-12 text-2xl font-bold tracking-wider -ml-12">Don't miss out on the action. Follow Us.</p>
             <div class="absolute top-48 left-1/3 ml-16">
                 <div class="flex w-full">
-                    <a href="#" class="cursor-pointer">
+                    <a href="https://api.whatsapp.com/send?phone=60122404211&text=Hi%20there!%20Thank%20you%20for%20contacting%20Kooky%20Cream.%20What%20can%20I%20help%20you%20with%20today%3F" class="cursor-pointer">
                     <img src="src/img/7.png" alt="wa" class="mx-1 mr-12">
                     </a>
-                    <a href="#" class="cursor-pointer">
+                    <a href="https://www.facebook.com/kookycream/" class="cursor-pointer">
                     <img src="src/img/8.png" alt="wa" class="mx-auto mr-12">
                     </a>    
-                    <a href="#" class="cursor-pointer">
+                    <a href="https://www.instagram.com/kookycream/?hl=en" class="cursor-pointer">
                     <img src="src/img/9.png" alt="wa">
                     </a>
                     <a href="#" class="cursor-pointer">
                     <p class=" bg-white rounded-full w-72 text-center py-2 px-4 absolute -bottom-52 -left-1/2 text-xl font-semibold -mx-48">Search</p>
                     </a>
-                    <a href="#" class="cursor-pointer">
+                    <a href="https://kookycreambakery.com/pages/faq" class="cursor-pointer">
                     <p class=" bg-white rounded-full w-72 text-center py-2 px-4 absolute  -bottom-52 left-3/4  text-xl font-semibold mx-32">FAQ</p>
                     </a>
 
