--- a/mini.html
+++ b/mini.html
@@ -47,7 +47,7 @@
             </div>
             <div class="flex">
                 <div class="flex flex-wrap items-center text-base justify-center">
-                    <a href="/" class="mr-5 hover:text-gray-900 cursor-pointer">HOME</a>
+                    <a href="./index.html" class="mr-5 hover:text-gray-900 cursor-pointer">HOME</a>
                     <div class="relative mr-5">
                         <input type="checkbox" id="sortbox" class="hidden absolute">
                         <label for="sortbox" class="flex items-center space-x-1 cursor-pointer">
@@ -59,9 +59,9 @@
                     
                             <div id="sortboxmenu" class="absolute mt-1 left-1 top-full min-w-max shadow rounded opacity-0 bg-yellow-50 border border-gray-400 transition delay-75 ease-in-out z-10">
                             <ul class="block text-start text-gray-900">
-                                <li><a href="/all.html" class="block px-3 py-2 hover:bg-gray-200">Get it Today!</a></li>
+                                <li><a href="./all.html" class="block px-3 py-2 hover:bg-gray-200">Get it Today!</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Kooky Cream Bundle</a></li>
-                                <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Mini Cakes</a></li>
+                                <li><a href="./mini.html" class="block px-3 py-2 hover:bg-gray-200">Mini Cakes</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Fruits</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Chocolate</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Mille Crepes</a></li>
@@ -73,9 +73,9 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="#" class="mr-5 hover:text-gray-900 cursor-pointer">ORDER NOW
+                    <a href="./all.html" class="mr-5 hover:text-gray-900 cursor-pointer">ORDER NOW
                     </a>  
-                    <a href="#" class="mr-5 hover:text-gray-900 cursor-pointer">CONTACT</a>
+                    <a href="https://api.whatsapp.com/send?phone=60122404211&text=Hi%20there!%20Thank%20you%20for%20contacting%20Kooky%20Cream.%20What%20can%20I%20help%20you%20with%20today%3F" class="mr-5 hover:text-gray-900 cursor-pointer">CONTACT</a>
                     <div class="relative text-gray-800 mr-5">
                         <input type="search" name="search" placeholder="search" class="bg-gray-70 text-gray-800 h-10 px-5 ml-8 pl-10 rounded-full text-sm focus:outline-none">
                         <button type="submit" class="absolute left-2 top-0 mt-3 pl-4 ml-4 cursor-pointer">
@@ -85,7 +85,7 @@
                         </button>
                       </div>
                     <div>
-                    <a href="/cart.html">
+                    <a href="./cart.html">
                     <img src="src/img/cart.png" alt="logo cart" width="35" height="35" class="mx-auto mr-5 cursor-pointer"/>
                     </a>
                 </div>
@@ -122,7 +122,7 @@
             <p class="text-xs font-semibold mb-2">Houjicha Macadamia</p>
             <p class="text-xs">RM 80</p>
             </div>
-            <img src="src/img/houjicha.png" alt="darkchoco" width="270" height="270">
+            <img src="src/img/houjicha.png" alt="houjicha" width="270" height="270">
             </a>
             </div>
             <img src="src/img/Earlgrey.png" alt="earlgray" width="270" height="270">
@@ -140,7 +140,7 @@
                     <a href="#" class="cursor-pointer">
                     <p class=" bg-white rounded-full w-72 text-center py-2 px-4  text-xl font-semibold">Search</p>
                     </a>
-                    <a href="#" class="cursor-pointer">
+                    <a href="https://kookycreambakery.com/pages/faq" class="cursor-pointer">
                     <p class=" bg-white rounded-full w-72 text-center py-2 px-4    text-xl font-semibold">FAQ</p>
                     </a>
 
