--- a/roselychee.html
+++ b/roselychee.html
@@ -50,7 +50,7 @@
             </div>
             <div class="flex">
                 <div class="flex flex-wrap items-center text-base justify-center">
-                    <a href="/" class="mr-5 cursor-pointer">HOME</a>
+                    <a href="./index.html" class="mr-5 cursor-pointer">HOME</a>
                     <div class="relative mr-5">
                         <input type="checkbox" id="sortbox" class="hidden absolute">
                         <label for="sortbox" class="flex items-center space-x-1 cursor-pointer">
@@ -62,9 +62,9 @@
                     
                             <div id="sortboxmenu" class="absolute mt-1 left-1 top-full min-w-max shadow rounded opacity-0 bg-yellow-50 border border-gray-400 transition delay-75 ease-in-out z-10">
                             <ul class="block text-start text-gray-900">
-                                <li><a href="/all.html" class="block px-3 py-2 hover:bg-gray-200">Get it Today!</a></li>
+                                <li><a href="./all.html" class="block px-3 py-2 hover:bg-gray-200">Get it Today!</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Kooky Cream Bundle</a></li>
-                                <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Mini Cakes</a></li>
+                                <li><a href="./mini.html" class="block px-3 py-2 hover:bg-gray-200">Mini Cakes</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Fruits</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Chocolate</a></li>
                                 <li><a href="#" class="block px-3 py-2 hover:bg-gray-200">Mille Crepes</a></li>
@@ -76,9 +76,9 @@
                             </ul>
                         </div>
                     </div>
-                    <a href="#" class="mr-5 hover:text-gray-900 cursor-pointer">ORDER NOW
+                    <a href="./all.html" class="mr-5 hover:text-gray-900 cursor-pointer">ORDER NOW
                     </a>  
-                    <a href="#" class="mr-5 hover:text-gray-900 cursor-pointer">CONTACT</a>
+                    <a href="https://api.whatsapp.com/send?phone=60122404211&text=Hi%20there!%20Thank%20you%20for%20contacting%20Kooky%20Cream.%20What%20can%20I%20help%20you%20with%20today%3F" class="mr-5 hover:text-gray-900 cursor-pointer">CONTACT</a>
                     <div class="relative text-gray-800 mr-5">
                         <input type="search" name="search" placeholder="search" class="bg-gray-70 text-gray-800 h-10 px-5 ml-8 pl-10 rounded-full text-sm focus:outline-none">
                         <button type="submit" class="absolute left-2 top-0 mt-3 pl-4 ml-4 cursor-pointer">
@@ -88,7 +88,7 @@
                         </button>
                       </div>
                     <div>
-                    <a href="/cart.html">
+                    <a href="./cart.html">
                     <img src="src/img/cart.png" alt="logo cart" width="35" height="35" class="mx-auto mr-5 cursor-pointer"/>
                     </a>
                 </div>
@@ -536,7 +536,7 @@
                                </div>
                           </div>
                            <div class=" w-48 h-16 bg-gray-800 text-yellow-50 py-5  text-md text-center"> 
-                               <a href="/cart.html">
+                               <a href="./cart.html">
                                <p>Add To Cart</p>
                             </a></div>
                   </div>
@@ -544,13 +544,13 @@
                     <div class="w-8/12 mx-auto flex flex-col font-semibold">
                         <p class="mb-5">Share This:</p>
                         <div class="flex">
-                            <a href="#" class="mr-5">
+                            <a href="https://api.whatsapp.com/send?phone=60122404211&text=Hi%20there!%20Thank%20you%20for%20contacting%20Kooky%20Cream.%20What%20can%20I%20help%20you%20with%20today%3F" class="mr-5">
                             <img src="src/img/7.png" alt="wa" width="50" height="50">
                             </a>
-                            <a href="#" class="mr-5">
+                            <a href="https://www.instagram.com/kookycream/?hl=en" class="mr-5">
                             <img src="src/img/8.png" alt="fb" width="50" height="50">
                             </a>
-                            <a href="#" class="mr-5">
+                            <a href="https://www.instagram.com/kookycream/?hl=en" class="mr-5">
                             <img src="src/img/9.png" alt="ig" width="50" height="50">
                             </a>
                         </div>
@@ -558,7 +558,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+       
         <div class="flex flex-col items-center justify-center mx-auto">
             <h1 class="text-5xl mb-12">You May Also Like</h1>
             <div class="flex justify-between mb-24 ">
@@ -581,12 +581,12 @@
                     <a href="#">
                     <p class="font-semibold">Tiramisu Mille Crepe</p>
                     <p>RM 138</p>
-                    <img src="src/img/tiramisumc.png" alt="tiramisumc width="300" height="300" class="-mt-6">
+                    <img src="src/img/tiramisumc.png" alt="tiramisumc" width="300" height="300" class="-mt-6">
                     </a>
                 </div>
 
             </div>
-            <a href="/" class="text-xl cursor-pointer flex text-gray-600 font-light">
+            <a href="./index.html" class="text-xl cursor-pointer flex text-gray-600 font-light">
                 <p><<</p>
                 <p><span class='text-transparent'>a</span>Back to home</p>
             </a>
