--- a/mini.html
+++ b/mini.html
@@ -129,7 +129,7 @@
         </div>
 
         <div class="h-12 w-96 flex items-center justify-center mx-auto">
-            <a href="/" class="text-xl cursor-pointer flex text-gray-600 font-light">
+            <a href="./index.html" class="text-xl cursor-pointer flex text-gray-600 font-light">
                 <p><<</p>
                 <p><span class='text-transparent'>a</span>Back to home</p>
             </a>
