--- a/mini.html
+++ b/mini.html
@@ -98,15 +98,23 @@
         <div class="w-full flex flex-col justify-center items-center">
             <h1 class="text-6xl tracking-widest">Mini Cakes</h1>
             <div class="flex w-72 text-md items-center justify-around mt-4 font-light">
-            <p>ALL</p>
+            <a href="./all.html">
+                <p>ALL</p>
+            </a>
             <p>MINI CAKE</p>
             </div>
         </div>
 
-        <div class="flex items-center justify-between mb-24 mt-12">
-            <img src="src/img/lemon.png" alt="lemon" width="270" height="270">
-
-
+        	<div class="grid grid-rows-1 grid-cols-4 gap-6 items-center justify-center mx-auto mb-16 mt-20">
+            <div class="relative w-64 h-60 rounded-3xl bg-yellow-50 border border-black"> 
+            <a href="#" class="cursor-pointer"> 
+            <div class="absolute top-4 flex flex-col left-20 -mx-1 text-center tracking-wide"> 
+            <p class="text-xs font-semibold mb-2">Lemon Pistachio</p>
+            <p class="text-xs">RM 68</p>
+            </div>
+            <img src="src/img/lemon.png" alt="lemon" width="250" height="250" class="mt-2">
+            </a>
+			</div>	
             <div class="relative w-64 h-60 rounded-3xl bg-yellow-50 border border-black"> 
             <a href="#" class="cursor-pointer"> 
             <div class="absolute top-4 flex flex-col left-14 text-center"> 
@@ -125,12 +133,19 @@
             <img src="src/img/houjicha.png" alt="houjicha" width="270" height="270">
             </a>
             </div>
+			<div class="relative w-64 h-60 rounded-3xl bg-yellow-50 border border-black"> 
+            <a href="#" class="cursor-pointer"> 
+            <div class="absolute top-4 flex flex-col left-24 -mx-1 text-center tracking-wide"> 
+            <p class="text-xs font-semibold mb-2">Earl Gray</p>
+            <p class="text-xs">RM 68</p>
+            </div>
             <img src="src/img/Earlgrey.png" alt="earlgray" width="270" height="270">
+				</a>
         </div>
 
         <div class="h-12 w-96 flex items-center justify-center mx-auto">
             <a href="./index.html" class="text-xl cursor-pointer flex text-gray-600 font-light">
-                <p><<</p>
+                <p> << </p>
                 <p><span class='text-transparent'>a</span>Back to home</p>
             </a>
             </div>
