--- a/checkout.html
+++ b/checkout.html
@@ -83,7 +83,7 @@
                 <a href="#">
             <p class="mr-6 text-yellow-50 bg-gray-700 py-5 px-4">Continue to Shipping</p>
             </a>
-            <a href="#">
+            <a href="./cart.html">
             <p>Return to Cart</p>
             </a>
             </div>
