--- a/roselychee.html
+++ b/roselychee.html
@@ -597,7 +597,7 @@
                     <a href="#" class="cursor-pointer">
                     <p class=" bg-white rounded-full w-72 text-center py-2 px-4  text-xl font-semibold">Search</p>
                     </a>
-                    <a href="#" class="cursor-pointer">
+                    <a href="https://kookycreambakery.com/pages/faq" class="cursor-pointer">
                     <p class=" bg-white rounded-full w-72 text-center py-2 px-4    text-xl font-semibold">FAQ</p>
                     </a>
 
