--- a/all.html
+++ b/all.html
@@ -41,7 +41,7 @@
     <header class="w-11/12 mx-auto ">
         <nav class="flex flex-wrap justify-between items-center mx-auto">
             <div class="border-r border-gray-500 w-64 -ml-10">
-                <a href="/">
+                <a href="./index.html">
                     <img src="src/img/logo.png" alt="logo kooky" class="mx-auto cursor-pointer"/>
                 </a>
             </div>
