--- a/checkout.html
+++ b/checkout.html
@@ -40,7 +40,7 @@
     <div class="flex-grow border border-gray-500">
         <nav class="flex items-center mt-12">
             <div class="mb-20">
-                <a href="/">
+                <a href="./index.html">
                     <img src="src/img/logo.png" alt="logo kooky" class=" mx-12 cursor-pointer"/>
                 </a>
                 <div class="text-xs flex tracking-widest mx-20">
